@@ -1,3 +1,8 @@
+2010-04-19  Werner Koch  <wk@g10code.com>
+
+	* system-w32.c (is_socket): New.
+	(__assuan_read, __assuan_write): Use is_socket.
+
 2010-04-16  Marcus Brinkmann  <marcus@g10code.de>
 
 	* assuan-uds.c (uds_reader, uds_sendfd): Don't break strict
